; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_rman.c_rman_is_region_manager.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_rman.c_rman_is_region_manager.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.resource = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.rman* }
%struct.rman = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rman_is_region_manager(%struct.resource* %0, %struct.rman* %1) #0 {
  %3 = alloca %struct.resource*, align 8
  %4 = alloca %struct.rman*, align 8
  store %struct.resource* %0, %struct.resource** %3, align 8
  store %struct.rman* %1, %struct.rman** %4, align 8
  %5 = load %struct.resource*, %struct.resource** %3, align 8
  %6 = getelementptr inbounds %struct.resource, %struct.resource* %5, i32 0, i32 0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load %struct.rman*, %struct.rman** %8, align 8
  %10 = load %struct.rman*, %struct.rman** %4, align 8
  %11 = icmp eq %struct.rman* %9, %10
  %12 = zext i1 %11 to i32
  ret i32 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
